Complete all the excersises relating to flex
completed all the 7 excercises

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .logo {
@@ -14,6 +19,8 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -23,3 +30,9 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+.header ul {
+  display: flex;
+  gap: 8px;
+}
+
